Polaczenie projektu backendu i frontendu, przekazanie danych z backendu do frontendu

--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -15,6 +15,15 @@
 	</properties>	
 	
 	<dependencies>
+	
+		<!-- Polaczenie z projektem Backendu -->
+		<dependency>
+			<groupId>net.kzn</groupId>
+			<artifactId>shoppingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	
+	
 		<!-- JAVA EE -->
 		<dependency>
 			<groupId>javax</groupId>
