--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -33,18 +33,18 @@
 		    <version>${spring.version}</version>
 		</dependency>
 		
-				<!-- SPRING - object - relational mapping (orm) -->
+		<!-- SPRING - object - relational mapping (orm) -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-orm</artifactId>
 		    <version>${spring.version}</version>
 		</dependency>
 
-		<!-- H2 Database -->
+		<!-- MySQL Database -->
 		<dependency>
-		    <groupId>com.h2database</groupId>
-		    <artifactId>h2</artifactId>
-		    <version>1.4.197</version>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.39</version>
 		</dependency>
 
 		<!-- Hibernate -->
